--- a/translations/kangyur/placeholders/089-007_toh550,896-the_way_of_the_single_letter_mantra_of_manjusri.xml
+++ b/translations/kangyur/placeholders/089-007_toh550,896-the_way_of_the_single_letter_mantra_of_manjusri.xml
@@ -18,9 +18,10 @@
                 <author role="translatorEng" ref="eft:person-199">Geshe Lozang Jamspal</author>
                 <author role="translatorEng" ref="eft:person-200">Kaia Fischer</author>
                 <editor role="projectEditor" ref="eft:person-289">Nathaniel Rich</editor>
+                <editor role="copyEditor" ref="eft:person-422">George FitzHerbert</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.8 <date>2021</date>
+                <edition>v 0.0.9 <date>2021</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="2.e">
@@ -48,11 +49,21 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-09-15T08:52:14.413Z" user="admin">15/09/2022 08:52:14</note>
-    <note type="updated" update="translation-status" value="3" date-time="2021-07-29T15:39:53.257Z" user="line-tofte">3</note>
-    <note type="updated" update="text-version" value="0.0.1" date-time="2021-07-29T15:39:53.257Z" user="line-tofte">0.0.1</note>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2021-07-29T15:40:14.374Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="text-version" value="0.0.3" date-time="2021-07-29T15:40:52.255Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.h" date-time="2022-02-09T15:43:55.66Z" user="line-tofte">2.h</note>    <note type="updated" update="text-version" value="0.0.4" date-time="2022-02-09T15:43:55.66Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.g" date-time="2022-04-07T08:58:01.253Z" user="line-tofte">2.g</note>    <note type="updated" update="text-version" value="0.0.5" date-time="2022-04-07T08:58:01.253Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="text-version" value="0.0.6" date-time="2022-04-07T08:58:27.351Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.f" date-time="2022-05-11T08:32:10.973Z" user="line-tofte">2.f</note>    <note type="updated" update="text-version" value="0.0.7" date-time="2022-05-11T08:32:10.973Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.e" date-time="2022-09-15T08:52:06.368Z" user="line-tofte">2.e</note>    <note type="updated" update="text-version" value="0.0.8" date-time="2022-09-15T08:52:06.368Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="lastUpdated" date-time="2022-09-15T08:52:53.468Z" user="admin">15/09/2022 08:52:53</note>
+                <note type="updated" update="translation-status" value="3" date-time="2021-07-29T15:39:53.257Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2021-07-29T15:39:53.257Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2021-07-29T15:40:14.374Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2021-07-29T15:40:52.255Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2022-02-09T15:43:55.66Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2022-02-09T15:43:55.66Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.g" date-time="2022-04-07T08:58:01.253Z" user="line-tofte">2.g</note>
+                <note type="updated" update="text-version" value="0.0.5" date-time="2022-04-07T08:58:01.253Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.6" date-time="2022-04-07T08:58:27.351Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.f" date-time="2022-05-11T08:32:10.973Z" user="line-tofte">2.f</note>
+                <note type="updated" update="text-version" value="0.0.7" date-time="2022-05-11T08:32:10.973Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.e" date-time="2022-09-15T08:52:06.368Z" user="line-tofte">2.e</note>
+                <note type="updated" update="text-version" value="0.0.8" date-time="2022-09-15T08:52:06.368Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.9" date-time="2022-09-15T08:52:45.449Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
