--- a/translations/kangyur/placeholders/089-008_toh551-in_praise_of_the_acuity_of_manjusri.xml
+++ b/translations/kangyur/placeholders/089-008_toh551-in_praise_of_the_acuity_of_manjusri.xml
@@ -18,10 +18,10 @@
                 <editor role="projectEditor" ref="eft:person-289">Nathaniel Rich</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.7 <date>2021</date>
+                <edition>v 0.0.8 <date>2021</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.f">
+            <publicationStmt status="2.e">
                 <idno xml:id="UT22084-089-008"/>
                 <date/>
             </publicationStmt>
@@ -37,11 +37,11 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-05-11T08:33:30.058Z" user="admin">11/05/2022 08:33:30</note>
+                <note type="lastUpdated" date-time="2022-09-15T08:53:46.93Z" user="admin">15/09/2022 08:53:46</note>
     <note type="updated" update="translation-status" value="3" date-time="2021-07-29T15:41:27.745Z" user="line-tofte">3</note>
     <note type="updated" update="text-version" value="0.0.1" date-time="2021-07-29T15:41:27.745Z" user="line-tofte">0.0.1</note>
     <note type="updated" update="text-version" value="0.0.2" date-time="2021-07-29T15:41:51.022Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="text-version" value="0.0.3" date-time="2021-07-29T15:42:31.255Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.h" date-time="2022-02-09T15:45:03.259Z" user="line-tofte">2.h</note>    <note type="updated" update="text-version" value="0.0.4" date-time="2022-02-09T15:45:03.259Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.g" date-time="2022-04-07T08:59:02.42Z" user="line-tofte">2.g</note>    <note type="updated" update="text-version" value="0.0.5" date-time="2022-04-07T08:59:02.42Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="text-version" value="0.0.6" date-time="2022-04-07T08:59:33.653Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.f" date-time="2022-05-11T08:33:22.558Z" user="line-tofte">2.f</note>    <note type="updated" update="text-version" value="0.0.7" date-time="2022-05-11T08:33:22.558Z" user="line-tofte">Auto (update-publication-status)</note>
+    <note type="updated" update="text-version" value="0.0.3" date-time="2021-07-29T15:42:31.255Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.h" date-time="2022-02-09T15:45:03.259Z" user="line-tofte">2.h</note>    <note type="updated" update="text-version" value="0.0.4" date-time="2022-02-09T15:45:03.259Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.g" date-time="2022-04-07T08:59:02.42Z" user="line-tofte">2.g</note>    <note type="updated" update="text-version" value="0.0.5" date-time="2022-04-07T08:59:02.42Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="text-version" value="0.0.6" date-time="2022-04-07T08:59:33.653Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.f" date-time="2022-05-11T08:33:22.558Z" user="line-tofte">2.f</note>    <note type="updated" update="text-version" value="0.0.7" date-time="2022-05-11T08:33:22.558Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.e" date-time="2022-09-15T08:53:38.871Z" user="line-tofte">2.e</note>    <note type="updated" update="text-version" value="0.0.8" date-time="2022-09-15T08:53:38.871Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
