--- a/translations/kangyur/placeholders/089-008_toh551-in_praise_of_the_acuity_of_manjusri.xml
+++ b/translations/kangyur/placeholders/089-008_toh551-in_praise_of_the_acuity_of_manjusri.xml
@@ -16,9 +16,10 @@
                 <author role="translatorEng" ref="eft:person-199">Geshe Lozang Jamspal</author>
                 <author role="translatorEng" ref="eft:person-200">Kaia Fischer</author>
                 <editor role="projectEditor" ref="eft:person-289">Nathaniel Rich</editor>
+                <editor role="copyEditor" ref="eft:person-422">George FitzHerbert</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.8 <date>2021</date>
+                <edition>v 0.0.9 <date>2021</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="2.e">
@@ -37,11 +38,21 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-09-15T08:53:46.93Z" user="admin">15/09/2022 08:53:46</note>
-    <note type="updated" update="translation-status" value="3" date-time="2021-07-29T15:41:27.745Z" user="line-tofte">3</note>
-    <note type="updated" update="text-version" value="0.0.1" date-time="2021-07-29T15:41:27.745Z" user="line-tofte">0.0.1</note>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2021-07-29T15:41:51.022Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="text-version" value="0.0.3" date-time="2021-07-29T15:42:31.255Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.h" date-time="2022-02-09T15:45:03.259Z" user="line-tofte">2.h</note>    <note type="updated" update="text-version" value="0.0.4" date-time="2022-02-09T15:45:03.259Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.g" date-time="2022-04-07T08:59:02.42Z" user="line-tofte">2.g</note>    <note type="updated" update="text-version" value="0.0.5" date-time="2022-04-07T08:59:02.42Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="text-version" value="0.0.6" date-time="2022-04-07T08:59:33.653Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.f" date-time="2022-05-11T08:33:22.558Z" user="line-tofte">2.f</note>    <note type="updated" update="text-version" value="0.0.7" date-time="2022-05-11T08:33:22.558Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.e" date-time="2022-09-15T08:53:38.871Z" user="line-tofte">2.e</note>    <note type="updated" update="text-version" value="0.0.8" date-time="2022-09-15T08:53:38.871Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="lastUpdated" date-time="2022-09-15T08:54:25.417Z" user="admin">15/09/2022 08:54:25</note>
+                <note type="updated" update="translation-status" value="3" date-time="2021-07-29T15:41:27.745Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2021-07-29T15:41:27.745Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2021-07-29T15:41:51.022Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2021-07-29T15:42:31.255Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2022-02-09T15:45:03.259Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2022-02-09T15:45:03.259Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.g" date-time="2022-04-07T08:59:02.42Z" user="line-tofte">2.g</note>
+                <note type="updated" update="text-version" value="0.0.5" date-time="2022-04-07T08:59:02.42Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.6" date-time="2022-04-07T08:59:33.653Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.f" date-time="2022-05-11T08:33:22.558Z" user="line-tofte">2.f</note>
+                <note type="updated" update="text-version" value="0.0.7" date-time="2022-05-11T08:33:22.558Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.e" date-time="2022-09-15T08:53:38.871Z" user="line-tofte">2.e</note>
+                <note type="updated" update="text-version" value="0.0.8" date-time="2022-09-15T08:53:38.871Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.9" date-time="2022-09-15T08:54:17.349Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
