--- a/translations/kangyur/placeholders/089-009_toh552-the_eight_maidens_praise_of_manjusri.xml
+++ b/translations/kangyur/placeholders/089-009_toh552-the_eight_maidens_praise_of_manjusri.xml
@@ -16,9 +16,10 @@
                 <author role="translatorEng" ref="eft:person-199">Geshe Lozang Jamspal</author>
                 <author role="translatorEng" ref="eft:person-200">Kaia Fischer</author>
                 <editor role="projectEditor" ref="eft:person-289">Nathaniel Rich</editor>
+                <editor role="copyEditor" ref="eft:person-422">George FitzHerbert</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.8 <date>2021</date>
+                <edition>v 0.0.9 <date>2021</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="2.e">
@@ -37,11 +38,21 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-09-15T08:55:24.382Z" user="admin">15/09/2022 08:55:24</note>
-    <note type="updated" update="translation-status" value="3" date-time="2021-07-29T15:43:03.671Z" user="line-tofte">3</note>
-    <note type="updated" update="text-version" value="0.0.1" date-time="2021-07-29T15:43:03.671Z" user="line-tofte">0.0.1</note>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2021-07-29T15:43:24.87Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="text-version" value="0.0.3" date-time="2021-07-29T15:44:08.114Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.h" date-time="2022-02-09T15:46:55.222Z" user="line-tofte">2.h</note>    <note type="updated" update="text-version" value="0.0.4" date-time="2022-02-09T15:46:55.222Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.g" date-time="2022-04-07T09:00:08.802Z" user="line-tofte">2.g</note>    <note type="updated" update="text-version" value="0.0.5" date-time="2022-04-07T09:00:08.802Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="text-version" value="0.0.6" date-time="2022-04-07T09:00:33.379Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.f" date-time="2022-05-11T08:34:25.742Z" user="line-tofte">2.f</note>    <note type="updated" update="text-version" value="0.0.7" date-time="2022-05-11T08:34:25.742Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.e" date-time="2022-09-15T08:55:16.346Z" user="line-tofte">2.e</note>    <note type="updated" update="text-version" value="0.0.8" date-time="2022-09-15T08:55:16.346Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="lastUpdated" date-time="2022-09-15T08:56:02.562Z" user="admin">15/09/2022 08:56:02</note>
+                <note type="updated" update="translation-status" value="3" date-time="2021-07-29T15:43:03.671Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2021-07-29T15:43:03.671Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2021-07-29T15:43:24.87Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2021-07-29T15:44:08.114Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2022-02-09T15:46:55.222Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2022-02-09T15:46:55.222Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.g" date-time="2022-04-07T09:00:08.802Z" user="line-tofte">2.g</note>
+                <note type="updated" update="text-version" value="0.0.5" date-time="2022-04-07T09:00:08.802Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.6" date-time="2022-04-07T09:00:33.379Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.f" date-time="2022-05-11T08:34:25.742Z" user="line-tofte">2.f</note>
+                <note type="updated" update="text-version" value="0.0.7" date-time="2022-05-11T08:34:25.742Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.e" date-time="2022-09-15T08:55:16.346Z" user="line-tofte">2.e</note>
+                <note type="updated" update="text-version" value="0.0.8" date-time="2022-09-15T08:55:16.346Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.9" date-time="2022-09-15T08:55:54.501Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
