--- a/translations/kangyur/translations/044-001_toh81-simhas_questions.xml
+++ b/translations/kangyur/translations/044-001_toh81-simhas_questions.xml
@@ -16,8 +16,8 @@
         <title type="longTitle" xml:lang="bo">འཕགས་པ་སེང་གེས་ཞུས་པ་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
         <title type="otherTitle" xml:lang="zh">佛説太子刷護經</title>
         <title type="otherTitle" xml:lang="bo">གྱལ་བུ་སེང་གེས་ཞུས་པ།</title>
-        <title type="otherTitle" xml:lang="Bo-Ltn">gyal bu seng ges zhus pa</title>
         <title type="otherTitle" xml:lang="zh">大寶積經, 阿闍世王子會</title>
+        <title type="otherTitle" xml:lang="Bo-Ltn">gyal bu seng ges zhus pa</title>
         <author role="translatorMain" ref="eft:team-39">Translated by the Kīrtimukha Translation
           Group<lb/>under the patronage and supervision of 84000: Translating the Words of the
           Buddha</author>
@@ -33,9 +33,11 @@
         <editor role="projectEditor" ref="eft:person-50">Andreas Doctor</editor>
         <editor role="projectEditor" ref="eft:person-274">Adam Krug</editor>
         <editor role="TEImarkupEditor" ref="eft:person-391">Sameer Dhingra</editor>
+        <editor role="finalReviewer" ref="eft:person-74">Ryan Damron</editor>
+        <editor role="TEImarkupEditor" ref="eft:person-108">André Rodrigues</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 0.0.3 <date>2022</date>
+                <edition>v 0.0.4 <date>2022</date>
                 </edition>
             </editionStmt>
 
@@ -73,8 +75,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2022-06-07T05:13:17.383Z" user="sameer">07/06/2022 05:13:17</note>
-
+        <note type="lastUpdated" date-time="2022-09-15T14:52:02.901Z" user="admin">15/09/2022 14:52:02</note>
         <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-11-04T09:32:27.59Z" user="andreas">v 0.1.0</note>
         <note type="updated" update="translation-status" value="2.e" date-time="2019-11-04T09:32:27.59Z" user="andreas">2.e</note>
         <note type="updated" update="translation-status" value="2.f" date-time="2020-01-27T13:10:23.67Z" user="mike">2.f</note>
@@ -98,9 +99,10 @@
         <note type="updated" update="text-version" value="0.1.9" date-time="2022-02-28T08:59:27.905Z" user="line-tofte">Auto
           (update-publication-status)</note>
         <note type="updated" update="text-version" value="0.1.10" date-time="2022-02-28T08:59:55.774Z" user="line-tofte">Auto (update-contributors)</note>
-          <note type="updated" update="translation-status" value="2" date-time="2022-04-12T11:51:03.044Z" user="line-tofte">2</note>
-          <note type="updated" update="text-version" value="0.0.2" date-time="2022-04-12T11:51:03.044Z" user="line-tofte">Auto (update-publication-status)</note>
-          <note type="updated" update="text-version" value="0.0.3" date-time="2022-04-12T11:51:34.263Z" user="line-tofte">Auto (update-contributors)</note>
+        <note type="updated" update="translation-status" value="2" date-time="2022-04-12T11:51:03.044Z" user="line-tofte">2</note>
+        <note type="updated" update="text-version" value="0.0.2" date-time="2022-04-12T11:51:03.044Z" user="line-tofte">Auto (update-publication-status)</note>
+        <note type="updated" update="text-version" value="0.0.3" date-time="2022-04-12T11:51:34.263Z" user="line-tofte">Auto (update-contributors)</note>
+          <note type="updated" update="text-version" value="0.0.4" date-time="2022-09-15T14:51:54.832Z" user="line-tofte">Auto (update-contributors)</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
