--- a/translations/kangyur/translations/094-003_toh726-the_tantra_on_the_origin_of_all_rites_of_tara_mother_of_all_the_tathagatas.xml
+++ b/translations/kangyur/translations/094-003_toh726-the_tantra_on_the_origin_of_all_rites_of_tara_mother_of_all_the_tathagatas.xml
@@ -32,7 +32,7 @@
         <editor role="finalReviewer" ref="eft:person-250">Rory Lindsay</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.0 <date>2022</date>
+                <edition>v 1.0.1 <date>2022</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="1.a">
@@ -40,7 +40,12 @@
                     <name>84000: Translating the Words of the Buddha</name> is a global non-profit
           initiative to translate all the Buddha’s words into modern languages, and to make them
           available to everyone. </publisher>
-                <availability>
+        <availability>
+          <p type="tantricRestriction">
+            <emph rend="bold">Warning:</emph> Readers are reminded that according to Vajrayāna Buddhist tradition there are
+            restrictions and commitments concerning tantra. Practitioners who are not sure if they should read this
+            translation are advised to consult the authorities of their lineage. The responsibility for reading this text
+            or sharing it with others who may or may not fulfill the requirements lies in the hands of readers.</p>
           <licence>
             <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
             <p>This work is provided under the protection of a Creative Commons CC BY-NC-ND
@@ -68,7 +73,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2022-09-14T21:16:30.809Z" user="admin">14/09/2022 21:16:30</note>
+        <note type="lastUpdated" date-time="2022-09-15T18:45:39.557Z" user="admin">15/09/2022 18:45:39</note>
         <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-13T10:52:10.736Z" user="john">v 0.1.0</note>
         <note type="updated" update="translation-status" value="3" date-time="2019-12-13T10:52:10.736Z" user="john">3</note>
         <note type="updated" update="translation-status" value="2.h" date-time="2020-09-09T08:10:37.707Z" user="line-tofte">2.h</note>
@@ -114,6 +119,7 @@
         <note type="updated" update="text-version" value="0.0.4" date-time="2022-09-01T10:03:18.395Z" user="line-tofte">Auto (update-contributors)</note>
           <note type="updated" update="translation-status" value="1.a" date-time="2022-09-14T21:16:22.797Z" user="martina-cotter">1.a</note>
           <note type="updated" update="text-version" value="1.0.0" date-time="2022-09-14T21:16:22.797Z" user="martina-cotter">First published version</note>
+          <note type="updated" update="text-version" value="1.0.1" date-time="2022-09-15T18:45:35.492Z" user="martina-cotter">Updated typo.</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
@@ -1427,10 +1433,10 @@
             posture and is of dharmakāya nature.</p>
           <milestone unit="chunk" xml:id="UT22084-094-003-264"/>
           <p tid="220">“Mañjuśrī, this is her mantra:</p>
-          <p rend="mantra" tid="221">“<mantra xml:lang="Sa-Ltn">namo ratna-trayāya. | nama
+          <p rend="mantra" tid="221">“<mantra xml:lang="Sa-Ltn">namo ratna-trayāya | nama
               ārya-jñāna-sāgarāya | akṣobhya-vyūha-rājāya | tathāgatāya | arhate
-              samyak-sambuddhāya. | nama āryāvalokiteśvarāya | bodhisattvāya | mahāsattvāya |
-              mahā-kāruṇikāya. | tadyathā | oṁ tāre ture tuttāre svāhā</mantra>.<note place="end" xml:id="UT22084-094-003-266"> The mantras of the mothers of the five families share
+              samyak-sambuddhāya | nama āryāvalokiteśvarāya | bodhisattvāya | mahāsattvāya |
+              mahā-kāruṇikāya | tadyathā | oṁ tāre ture tuttāre svāhā</mantra>.<note place="end" xml:id="UT22084-094-003-266"> The mantras of the mothers of the five families share
               the same formula, replacing the name of the primary buddha of the family, in this
               instance Akṣobhya, and rearranging the Tārā mantra at the end. The mantra in this
               section reads, “Homage to the Three Jewels! Homage to the ocean of awakened wisdom! To
