--- a/translations/kangyur/placeholders/101-146_toh1090-in_praise_of_the_mistress_of_disease.xml
+++ b/translations/kangyur/placeholders/101-146_toh1090-in_praise_of_the_mistress_of_disease.xml
@@ -13,10 +13,10 @@
                 <editor role="copyEditor" ref="eft:person-422">George FitzHerbert</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.8 <date>2022</date>
+                <edition>v 0.0.9 <date>2022</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.e">
+            <publicationStmt status="2.d">
                 <idno xml:id="UT22084-101-146"/>
                 <date/>
             </publicationStmt>
@@ -32,7 +32,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-09-02T08:35:10.427Z" user="admin">02/09/2022 08:35:10</note>
+                <note type="lastUpdated" date-time="2022-09-16T12:34:06.134Z" user="admin">16/09/2022 12:34:06</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2022-04-12T07:53:43.707Z" user="line-tofte">2.h</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2022-04-12T07:53:43.707Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.0.3" date-time="2022-04-12T08:01:52.252Z" user="line-tofte">Auto (update-contributors)</note>
@@ -44,6 +44,8 @@
                 <note type="updated" update="translation-status" value="2.e" date-time="2022-09-02T08:34:28.484Z" user="line-tofte">2.e</note>
                 <note type="updated" update="text-version" value="0.0.7" date-time="2022-09-02T08:34:28.484Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.0.8" date-time="2022-09-02T08:35:08.302Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.d" date-time="2022-09-16T12:34:00.127Z" user="line-tofte">2.d</note>
+                <note type="updated" update="text-version" value="0.0.9" date-time="2022-09-16T12:34:00.127Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
