--- a/translations/kangyur/placeholders/068-003_toh269-the_sutra_dispelling_the_darkness_of_the_ten_directions.xml
+++ b/translations/kangyur/placeholders/068-003_toh269-the_sutra_dispelling_the_darkness_of_the_ten_directions.xml
@@ -13,11 +13,11 @@
             <editor role="externalReviewer" ref="contributors.xml#person-281">Paul Harrison</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2019</date>
+                <edition>v 0.0.3 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="3">
+            <publicationStmt status="2.g">
                 <idno xml:id="UT22084-068-003"/>
                 <date/>
             </publicationStmt>
@@ -33,9 +33,11 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2019-12-20T13:00:56.117Z" user="admin">20/12/2019 13:00:56</note>
+                <note type="lastUpdated" date-time="2022-09-16T13:50:14.719Z" user="admin">16/09/2022 13:50:14</note>
             
 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
+    <note type="updated" update="translation-status" value="2.h" date-time="2021-10-19T08:20:42.832Z" user="line-tofte">2.h</note>
+    <note type="updated" update="text-version" value="0.0.2" date-time="2021-10-19T08:20:42.832Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.g" date-time="2022-09-16T13:50:06.702Z" user="line-tofte">2.g</note>    <note type="updated" update="text-version" value="0.0.3" date-time="2022-09-16T13:50:06.702Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
