--- a/translations/kangyur/placeholders/068-003_toh269-the_sutra_dispelling_the_darkness_of_the_ten_directions.xml
+++ b/translations/kangyur/placeholders/068-003_toh269-the_sutra_dispelling_the_darkness_of_the_ten_directions.xml
@@ -4,16 +4,17 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">phyogs bcu'i mun sel gyi mdo/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">daśadigandhakāravidhvaṃsanasūtra</title>
                 <title type="mainTitle" xml:lang="en">The Sūtra Dispelling the Darkness of the Ten Directions</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">'phags pa phyogs bcu'i mun pa rnam par sel ba zhes bya ba theg pa chen po'i mdo</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">daśadigandhakāravidhvaṃsanasūtra</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">phyogs bcu'i mun sel gyi mdo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryadaśadigandha­kāravidhvaṃsana­nāmamahāyānasūtra</title>
-                <author role="translatorMain" ref="contributors.xml#team-27"/>
-            <editor role="externalReviewer" ref="contributors.xml#person-281">Paul Harrison</editor>
+                <title type="otherTitle" xml:lang="Sa-Ltn">'phags pa phyogs bcu'i mun pa rnam par sel ba zhes bya ba theg pa chen po'i mdo</title>
+                <author role="translatorMain" ref="eft:team-27"/>
+                <editor role="externalReviewer" ref="eft:person-281">Paul Harrison</editor>
+                <editor role="projectEditor" ref="eft:person-92">Laura Goetz</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2019</date>
+                <edition>v 0.0.4 <date>2019</date>
                 </edition>
             </editionStmt>
 
@@ -33,11 +34,13 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-09-16T13:50:14.719Z" user="admin">16/09/2022 13:50:14</note>
-            
-<note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
-    <note type="updated" update="translation-status" value="2.h" date-time="2021-10-19T08:20:42.832Z" user="line-tofte">2.h</note>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2021-10-19T08:20:42.832Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.g" date-time="2022-09-16T13:50:06.702Z" user="line-tofte">2.g</note>    <note type="updated" update="text-version" value="0.0.3" date-time="2022-09-16T13:50:06.702Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="lastUpdated" date-time="2022-09-16T13:50:50.978Z" user="admin">16/09/2022 13:50:50</note>
+                <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2021-10-19T08:20:42.832Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2021-10-19T08:20:42.832Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.g" date-time="2022-09-16T13:50:06.702Z" user="line-tofte">2.g</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2022-09-16T13:50:06.702Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2022-09-16T13:50:42.931Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
