--- a/translations/kangyur/placeholders/075-004_toh346-the_account_of_the_noble_deeds_of_sumagadha.xml
+++ b/translations/kangyur/placeholders/075-004_toh346-the_account_of_the_noble_deeds_of_sumagadha.xml
@@ -10,11 +10,11 @@
                 <author role="translatorMain" ref="contributors.xml#team-27"/>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2019</date>
+                <edition>v 0.0.3 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.h">
+            <publicationStmt status="2.g">
                 <idno xml:id="UT22084-075-004"/>
                 <date/>
             </publicationStmt>
@@ -30,12 +30,14 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-11-17T15:35:58.437Z" user="admin">17/11/2021 15:35:58</note>
+                <note type="lastUpdated" date-time="2022-09-16T13:51:58.052Z" user="admin">16/09/2022 13:51:58</note>
             
 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
     <note type="updated" update="translation-status" value="2.h" date-time="2021-11-17T15:35:50.736Z" user="line-tofte">2.h</note>
 
     <note type="updated" update="text-version" value="0.0.2" date-time="2021-11-17T15:35:50.736Z" user="line-tofte">Auto (update-publication-status)</note>
+    <note type="updated" update="translation-status" value="2.g" date-time="2022-09-16T13:51:50.014Z" user="line-tofte">2.g</note>
+    <note type="updated" update="text-version" value="0.0.3" date-time="2022-09-16T13:51:50.014Z" user="line-tofte">Auto (update-publication-status)</note>
 </notesStmt>
         </fileDesc>
     </teiHeader>
