--- a/translations/kangyur/placeholders/075-004_toh346-the_account_of_the_noble_deeds_of_sumagadha.xml
+++ b/translations/kangyur/placeholders/075-004_toh346-the_account_of_the_noble_deeds_of_sumagadha.xml
@@ -4,13 +4,17 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">ma ga d+hA bzang mo'i rtogs pa brjod pa/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">sumāgadhāvadāna</title>
                 <title type="mainTitle" xml:lang="en">The Account of the Noble Deeds of Sumāgadhā</title>
-                <author role="translatorMain" ref="contributors.xml#team-27"/>
+                <title type="mainTitle" xml:lang="Sa-Ltn">sumāgadhāvadāna</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">ma ga d+hA bzang mo'i rtogs pa brjod pa/</title>
+                <author role="translatorMain" ref="eft:team-27"/>
+                <consultant role="projectManager" ref="eft:person-175">Rev. Dr. Ani Kunga Chodron</consultant>
+                <author role="translatorEng" ref="eft:person-175">Rev. Dr. Ani Kunga Chodron</author>
+                <consultant role="dharmaMaster" ref="eft:person-173">Ven. Khenpo Kalsang Gyaltsen</consultant>
+                <editor role="projectEditor" ref="eft:person-92">Laura Goetz</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2019</date>
+                <edition>v 0.0.4 <date>2019</date>
                 </edition>
             </editionStmt>
 
@@ -30,15 +34,14 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-09-16T13:51:58.052Z" user="admin">16/09/2022 13:51:58</note>
-            
-<note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
-    <note type="updated" update="translation-status" value="2.h" date-time="2021-11-17T15:35:50.736Z" user="line-tofte">2.h</note>
-
-    <note type="updated" update="text-version" value="0.0.2" date-time="2021-11-17T15:35:50.736Z" user="line-tofte">Auto (update-publication-status)</note>
-    <note type="updated" update="translation-status" value="2.g" date-time="2022-09-16T13:51:50.014Z" user="line-tofte">2.g</note>
-    <note type="updated" update="text-version" value="0.0.3" date-time="2022-09-16T13:51:50.014Z" user="line-tofte">Auto (update-publication-status)</note>
-</notesStmt>
+                <note type="lastUpdated" date-time="2022-09-16T13:53:59.253Z" user="admin">16/09/2022 13:53:59</note>
+                <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2021-11-17T15:35:50.736Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2021-11-17T15:35:50.736Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.g" date-time="2022-09-16T13:51:50.014Z" user="line-tofte">2.g</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2022-09-16T13:51:50.014Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2022-09-16T13:53:51.215Z" user="line-tofte">Auto (update-contributors)</note>
+            </notesStmt>
         </fileDesc>
     </teiHeader>
     <text>
