--- a/translations/kangyur/placeholders/090-045_toh601,884-the_incantation_of_the_reliquary.xml
+++ b/translations/kangyur/placeholders/090-045_toh601,884-the_incantation_of_the_reliquary.xml
@@ -17,9 +17,10 @@
                 <editor role="projectEditor" ref="eft:person-74">Ryan Damron</editor>
                 <editor role="copyEditor" ref="eft:person-92">Laura Goetz</editor>
                 <editor role="projectEditor" ref="eft:person-289">Nathaniel Rich</editor>
+                <editor role="TEImarkupEditor" ref="eft:person-381">Martina Cotter</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.14 <date>2021</date>
+                <edition>v 0.0.15 <date>2021</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="2.a">
@@ -47,7 +48,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-09-16T14:00:18.076Z" user="admin">16/09/2022 14:00:18</note>
+                <note type="lastUpdated" date-time="2022-09-16T14:06:00.184Z" user="admin">16/09/2022 14:06:00</note>
                 <note type="updated" update="translation-status" value="4" date-time="2021-10-25T12:26:35.738Z" user="line-tofte">4</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-10-25T12:26:35.738Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="translation-status" value="3" date-time="2021-10-29T14:24:28.861Z" user="line-tofte">3</note>
@@ -71,6 +72,7 @@
                 <note type="updated" update="text-version" value="0.0.13" date-time="2022-08-30T08:25:49.737Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="translation-status" value="2.a" date-time="2022-09-16T14:00:09.986Z" user="line-tofte">2.a</note>
                 <note type="updated" update="text-version" value="0.0.14" date-time="2022-09-16T14:00:09.986Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.15" date-time="2022-09-16T14:05:52.151Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
