--- a/translations/kangyur/translations/062-008_toh208-the_great_rumble.xml
+++ b/translations/kangyur/translations/062-008_toh208-the_great_rumble.xml
@@ -33,7 +33,7 @@
                                         Rich</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.0 <date>2022</date>
+                <edition>v 1.0.1 <date>2022</date>
                 </edition>
             </editionStmt>
                         <publicationStmt status="1.a">
@@ -77,7 +77,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2022-09-16T01:17:17.284Z" user="admin">16/09/2022 01:17:17</note>
+                                <note type="lastUpdated" date-time="2022-09-17T16:48:54.899Z" user="admin">17/09/2022 16:48:54</note>
                                 <note type="updated" update="translation-status" value="4" date-time="2020-10-02T13:45:27.762Z" user="line-tofte">4</note>
                                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-10-02T13:45:27.762Z" user="line-tofte">0.0.1</note>
                                 <note type="updated" update="translation-status" value="3" date-time="2020-11-12T11:07:57.739Z" user="line-tofte">3</note>
@@ -126,6 +126,7 @@
                                         (update-contributors)</note>
                             <note type="updated" update="translation-status" value="1.a" date-time="2022-09-16T01:17:09.29Z" user="sameer">1.a</note>
                             <note type="updated" update="text-version" value="1.0.0" date-time="2022-09-16T01:17:09.29Z" user="sameer">First published version</note>
+                            <note type="updated" update="text-version" value="1.0.1" date-time="2022-09-17T16:48:50.837Z" user="andre">Glossary matching revised, activated in CG</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
@@ -574,7 +575,7 @@
                                                 New York: Wisdom Publications, 1995.</bibl>
                                 </div>
                         </div>
-                        <div type="glossary" status="excluded">
+                        <div type="glossary">
                                 <list type="glossary">
                                         <item>
                         <gloss type="term" xml:id="UT22084-062-008-46">
@@ -883,37 +884,12 @@
                                                 </gloss>
                     </item>
                                         <item>
-                        <gloss type="place" xml:id="UT22084-062-008-72">
-                                                  <term>Jambudvīpa</term>
-                                                  <term xml:lang="Bo-Ltn" status="verified">’dzam
-                                                  bu’i gling</term>
-                                                  <term xml:lang="bo">འཛམ་བུའི་གླིང་།</term>
-                                                  <term xml:lang="Sa-Ltn" status="verified">Jambudvīpa</term>
-                                                  <term type="definition">The name of the southern
-                                                  continent in Buddhist cosmology, which can signify
-                                                  either the known human world, or more specifically
-                                                  the Indian subcontinent, literally “the jambu
-                                                  island/continent.” <distinct>Jambu</distinct> is
-                                                  the name used for a range of plum-like fruits from
-                                                  trees belonging to the genus <foreign xml:lang="la">Szygium</foreign>, particularly
-                                                  <foreign xml:lang="la">Szygium jambos</foreign>
-                                                  and <foreign xml:lang="la">Szygium
-                                                  cumini</foreign>, and has commonly been rendered
-                                                  “rose apple,” although “black plum” may be a less
-                                                  misleading term. Among various explanations given
-                                                  for the continent being so named, one (in the
-                                                  <title xml:lang="Sa-Ltn">
-                                    <ref target="https://read.84000.co/translation/toh4089.html" rend="pending">Abhidharmakośa</ref>
-                                </title>) is
-                                                  that a jambu tree grows in its northern mountains
-                                                  beside Lake Anavatapta, mythically considered the
-                                                  source of the four great rivers of India, and that
-                                                  the continent is therefore named from the tree or
-                                                  the fruit. Jambudvīpa has the <foreign xml:lang="Sa-Ltn" type="term">vajrāsana</foreign>
-                                                  (“seat of awakening”) at its center and is the
-                                                  only continent upon which buddhas attain
-                                                  awakening.</term>
-                                                </gloss>
+                        <gloss xml:id="UT22084-062-008-72" type="place" mode="match">
+                            <term>Jambudvīpa</term>
+                            <term xml:lang="Bo-Ltn" status="verified">’dzam bu’i gling</term>
+                            <term xml:lang="bo">འཛམ་བུའི་གླིང་།</term>
+                            <term xml:lang="Sa-Ltn" status="verified">Jambudvīpa</term>
+                        </gloss>
                     </item>
                                         <item>
                         <gloss type="place" xml:id="UT22084-062-008-73">
