--- a/translations/kangyur/translations/090-041_toh597,984-the_usnisavijaya_dharani.xml
+++ b/translations/kangyur/translations/090-041_toh597,984-the_usnisavijaya_dharani.xml
@@ -5,9 +5,9 @@
                 <fileDesc>
                         <titleStmt>
                                 <title type="mainTitle" xml:lang="en">The Uṣṇīṣavijayā Dhāraṇī</title>
-                                <title type="mainTitle" xml:lang="Sa-Ltn">Uṣṇīṣavijayā­nāma­dhāraṇī</title>
-                                <title type="mainTitle" xml:lang="bo">གཙུག་ཏོར་རྣམ་པར་རྒྱལ་བ་ཞེས་བྱ་བའི་གཟུངས།</title>
-                                <title type="mainTitle" xml:lang="Bo-Ltn">gtsug tor rnam par rgyal ba zhes bya ba’i gzungs</title>
+                                <title type="mainTitle" xml:lang="Sa-Ltn">Uṣṇīṣavijayā­dhāraṇī</title>
+                                <title type="mainTitle" xml:lang="bo">གཙུག་ཏོར་རྣམ་པར་རྒྱལ་བའི་གཟུངས།</title>
+                                <title type="mainTitle" xml:lang="Bo-Ltn">gtsug tor rnam par rgyal ba’i gzungs</title>
                                 <title type="longTitle" xml:lang="en">The Noble Uṣṇīṣavijayā Dhāraṇī That Purifies All Lower Rebirths</title>
                                 <title type="longTitle" xml:lang="Sa-Ltn">Ārya­sarva­durgati­pariśodhaniuṣṇīṣavijayā­nāma­dhāraṇī</title>
                                 <title type="longTitle" xml:lang="bo">འཕགས་པ་ངན་འགྲོ་ཐམས་ཅད་ཡོངས་སུ་སྦྱོང་བ་གཙུག་ཏོར་རྣམ་པར་རྒྱལ་བ་ཞེས་བྱ་བའི་གཟུངས།</title>
@@ -37,7 +37,7 @@
                                         Gu</sponsor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.2.2 <date>2022</date>
+                <edition>v 1.2.3 <date>2022</date>
                 </edition>
             </editionStmt>
                         <publicationStmt status="1.a">
@@ -93,7 +93,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2022-09-17T16:23:18.215Z" user="admin">17/09/2022 16:23:18</note>
+                                <note type="lastUpdated" date-time="2022-09-18T11:44:12.028Z" user="admin">18/09/2022 11:44:12</note>
                                 <note type="updated" update="translation-status" value="3" date-time="2021-03-10T08:52:50.454Z" user="line-tofte">3</note>
                                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-03-10T08:52:50.454Z" user="line-tofte">0.0.1</note>
                                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-06-08T09:50:56.094Z" user="line-tofte">Auto
@@ -138,6 +138,7 @@
                             <note type="updated" update="text-version" value="1.1.2" date-time="2022-08-24T19:40:52.566Z" user="john">One small correction to a Toh number.</note>
                             <note type="updated" update="text-version" value="1.2.1" date-time="2022-09-13T10:39:55.472Z" user="john">Editing (still incomplete) of dhāraṇī and added paragraph to intro, further edits will follow soon.</note>
                             <note type="updated" update="text-version" value="1.2.2" date-time="2022-09-17T16:23:14.163Z" user="john">Further additions and edits to introduction, markup of dhāraṇī using "key" attribute, additional notes, and two new bibliography entries</note>
+                            <note type="updated" update="text-version" value="1.2.3" date-time="2022-09-18T11:44:07.957Z" user="john">Further edits, addition of bifurcated texts for notes 28,34, and 36, correction of typos, correction of name for the assembly hall.</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
@@ -443,7 +444,7 @@
                                                 simply <title xml:lang="Pi-Ltn">Uṇhissa-vijaya</title>) but found in a 
                                                 number of different forms, some in Pali but others in Siamese, Lao, Yuon, and Khmer. 
                                                 Some refer at least briefly to the story of the 
-                                                god Supratiṣṭha (Pali Supatiṭṭhita), but instead of the dhāraṇī of the Sanskrit
+                                                god Supratiṣṭhita (Pali Supatiṭṭhita), but instead of the dhāraṇī of the Sanskrit
                                                 and Tibetan texts they contain a set of verses (<foreign xml:lang="Sa-Ltn">gāthā</foreign>) 
                                                 to be recited whose content is unrelated to that of the Sanskrit dhāraṇī. The 
                                                 <foreign xml:lang="Sa-Ltn">gāthā</foreign> are also found alone in several
@@ -559,9 +560,9 @@
                                                 buddhas and bodhisattvas. </p>
                                         <lb/>
                                         <milestone unit="chunk" xml:id="UT22084-090-041-36"/>
-                                        <p tid="31">The god Supratiṣṭhita was seated in the divine
-                                                assembly hall Excellent Dharma among the gods of the
-                                                Heaven of the Thirty-Three, in a great palace, where
+                                        <p tid="31">There was a god called Supratiṣṭhita, seated in the divine
+                                                assembly hall, Sudharmā, among the gods of the
+                                                Heaven of the Thirty-Three; he lived in a great palace, where
                                                 he was surrounded by the finest divine pleasures and
                                                 a great harem of divine maidens playing and singing
                                                 songs. </p>
@@ -720,16 +721,26 @@
                                                   separate dhāraṇīs.</note>
                     </p>
                                         <milestone unit="chunk" xml:id="UT22084-090-041-57"/>
-                                        <p rend="mantra" tid="43">“<mantra type="dharani" xml:lang="Sa-Ltn" key="toh597">namo
-                                                  ratna trayāya |</mantra>
-                        <note place="end" xml:id="UT22084-090-041-58">An opening homage
+                                        <p rend="mantra" tid="87">“<mantra type="dharani" xml:lang="Sa-Ltn" key="toh597">namo
+                                                ratna trayāya |</mantra>
+                        <note place="end" xml:id="UT22084-090-041-58">
+                            <p key="toh597" tid="88">This opening homage
+                                                        to the Three Jewels is included here only in Toh 597, the version 
+                                                        of the text in the Action Tantra section of the Degé Kangyur, 
+                                                        and is not present in Toh 984, the supposedly duplicate reiteration in the Dhāraṇī
+                                                        section. Moreover, it is only in the Degé Kangyur that the dhāraṇī in the Action Tantra version includes this homage;  
+                                                        it does not appear in the Action Tantra recensions 
+                                                        in the Yongle, Narthang, Lhasa, and Stok Palace Kangyurs.</p>
+                                                        <p key="toh984" tid="89">An opening homage
                                                           to the Three Jewels, <foreign xml:lang="Sa-Ltn">namo
-                                                                  ratna trayāya</foreign>, is included at the start of the dhāraṇī in the version 
-                                                          of this text in the Action Tantra section of the Degé Kangyur, 
-                                                          Toh 597, but is not present in the supposedly duplicate reiteration of this text in the Dhāraṇī
-                                                          section, Toh 984. It is only in the Degé Kangyur that this homage is present in the Action Tantra version;  
-                                                          is not present in any of the Action Tantra recensions 
-                                                          in the Yongle, Narthang, Lhasa, and Stok Palace Kangyurs. </note> 
+                                                                  ratna trayāya</foreign>, is added here in Toh 597, the version 
+                                                                of the text in the Action Tantra section of the Degé Kangyur, 
+                                                                but is not present here in Toh 984 in the Dhāraṇī section despite this version supposedly 
+                                                                being a duplicate reiteration of Toh 597. Moreover, it is only in the Degé Kangyur that 
+                                                                the dhāraṇī in the Action Tantra version includes that phrase of homage;  
+                                                                it does not appear in the Action Tantra recensions 
+                                                                in the Yongle, Narthang, Lhasa, and Stok Palace Kangyurs.</p>
+                        </note> 
                                                 <mantra type="dharani" xml:lang="Sa-Ltn">oṃ namo bhagavate
                                                         sarva­trailokya­prati­viśiṣṭāya buddhāya te namaḥ |
                                                   tadyathā | <lb/> oṃ bhrūṃ bhrūṃ bhrūṃ | śodhaya
@@ -766,18 +777,29 @@
                                                   vajre | vajriṇi | vajraṃ bhavatu mama śarīraṃ
                                                   sarva­sattvānāñ ca kāya­pari­śuddhir bhavatu | sadā me<note place="end" xml:id="UT22084-090-041-206">Yongle and Kanxi here read <foreign xml:lang="Sa-Ltn">sadame</foreign>,
                                                           while Hidas’ edition of the Sanskrit manuscripts has <foreign xml:lang="Sa-Ltn">mama sadā</foreign>.
-                                                          In Toh 498 the phrase reads <foreign xml:lang="Sa-Ltn">kāya­pari­śuddhir bhavatu | me sadā
+                                                          In Toh 595 and 598 the phrase reads <foreign xml:lang="Sa-Ltn">kāya­pari­śuddhir bhavatu | me sadā
                                                                   sarva­gati­pari­śuddhiś ca.</foreign>
                             </note>
                                                         sarva­gati­pari­śuddhiś ca |</mantra>
                                                 <mantra type="dharani" xml:lang="Sa-Ltn" key="toh597">samantān mocaya mocaya | ādhiṣṭhāna</mantra>
-                        <note place="end" xml:id="UT22084-090-041-207">This is the anomalous phrase mentioned in the introduction at <ptr target="#UT22084-090-041-212"/>. 
-                                                          In place of the reading <foreign xml:lang="Sa-Ltn">samantān mocaya mocaya | ādhiṣṭhāna</foreign> at this point in the Degé of Toh 597 and in the equivalent texts in the Lithang and Cone Kangyurs, the 
-                                                        supposedly duplicate reiteration of this text in the Dhāraṇī section, Toh 984, instead reads <foreign xml:lang="Sa-Ltn">sarva­ta­thāgata­­samaya ādhiṣṭhānādhiṣṭhite</foreign>. The Sanskrit manuscripts
-                                                        as edited by Hidas read <foreign xml:lang="Sa-Ltn">sarva­­tathāgata­­hṛdayādhiṣṭhānādhiṣṭhite</foreign>. However, in other Kangyurs, including the Narthang, 
-                                                        Lhasa, and Stok Palace, the phrase is omitted altogether. See also <ptr target="#UT22084-090-041-209"/>.</note>
                         <mantra type="dharani" xml:lang="Sa-Ltn" key="toh984">sarva­ta­thāgata­­samaya 
                                                                 ādhiṣṭhānādhiṣṭhite</mantra>
+                        <note place="end" xml:id="UT22084-090-041-207">
+                                                        <p key="toh597" tid="90">This is the anomalous phrase mentioned in the introduction at <ptr target="#UT22084-090-041-212"/>. 
+                                                                In place of the reading <foreign xml:lang="Sa-Ltn">samantān mocaya mocaya | ādhiṣṭhāna</foreign> here in the Degé of Toh 597 
+                                                                and in the equivalent texts in the Lithang and Cone Kangyurs, the 
+                                                                supposedly duplicate reiteration of this text in the Dhāraṇī section, Toh 984, instead reads 
+                                                                <foreign xml:lang="Sa-Ltn">sarva­ta­thāgata­­samaya ādhiṣṭhānādhiṣṭhite</foreign>. The Sanskrit manuscripts
+                                                                as edited by Hidas read <foreign xml:lang="Sa-Ltn">sarva­­tathāgata­­hṛdayādhiṣṭhānādhiṣṭhite</foreign>. However, in other Kangyurs, including the Narthang, 
+                                                                Lhasa, and Stok Palace, the phrase is omitted altogether. See also <ptr target="#UT22084-090-041-209"/>.</p>
+                                                        <p key="toh984" tid="91">This is the anomalous phrase mentioned in the introduction at <ptr target="#UT22084-090-041-212"/>. 
+                                                                In place of the reading <foreign xml:lang="Sa-Ltn">sarva­ta­thāgata­­samaya ādhiṣṭhānādhiṣṭhite</foreign> here 
+                                                                in Toh 984 in the Dhāraṇī section of the Degé, the Toh 597 version of the text in the Action Tantra section instead 
+                                                                reads <foreign xml:lang="Sa-Ltn">samantān mocaya mocaya | ādhiṣṭhāna</foreign>, as do the equivalent texts in the Lithang 
+                                                                and Cone Kangyurs. The Sanskrit manuscripts
+                                                        as edited by Hidas read <foreign xml:lang="Sa-Ltn">sarva­­tathāgata­­hṛdayādhiṣṭhānādhiṣṭhite</foreign>. However, in other Kangyurs, including the Narthang, 
+                                                        Lhasa, and Stok Palace, the phrase is omitted altogether. See also <ptr target="#UT22084-090-041-209"/>.</p>
+                        </note>
                         <mantra type="dharani" xml:lang="Sa-Ltn"> |
                                                                         sarva­tathāgatāś ca mām<note place="end" xml:id="UT22084-090-041-202">
                                 <foreign xml:lang="Sa-Ltn">māṃ</foreign> is absent in Hidas’ Sanskrit 
@@ -785,14 +807,23 @@
                                                 budhya budhya | sidhya sidhya | bodhaya bodhaya | <ref cRef="F.122.a" key="toh984" type="folio" xml:id="UT22084-090-041-186"/> vibodhaya vibodhaya |
                                                 mocaya mocaya | vimocaya vimocaya | śodhaya śodhaya |
                                                 viśodhaya viśodhaya | </mantra>
-                        <mantra type="dharani" xml:lang="Sa-Ltn" key="toh984">samantān mocaya mocaya</mantra>
-                        <note place="end" xml:id="UT22084-090-041-209">At this point in most versions 
-                                                        of the dhāraṇī comes the phrase <foreign xml:lang="Sa-Ltn">samantān mocaya mocaya</foreign> which, while it is absent in the 
-                                                          Degé text of the version of this work in the tantra section (Toh 597), is present in the supposedly duplicate reiteration in the Dhāraṇī section (Toh 984) as well as in the Stok Palace Kangyur 
+                        <mantra type="dharani" xml:lang="Sa-Ltn" key="toh984">samantān mocaya 
+                                                        mocaya</mantra>
+                        <note place="end" xml:id="UT22084-090-041-209">
+                            <p key="toh597" tid="92">At this point in most versions 
+                                                        of the dhāraṇī comes the phrase <foreign xml:lang="Sa-Ltn">samantān mocaya mocaya</foreign> which, while it is absent here in the 
+                                                          Degé text of Toh 597, the version of this work in the Action Tantra section, is present in Toh 984, the supposedly duplicate reiteration in the Dhāraṇī section, as well as in the Stok Palace Kangyur, 
                                                           and in the Sanskrit manuscripts according to Hidas’ edition; in the Narthang and Lhasa Kangyurs it reads <foreign xml:lang="Sa-Ltn">samantā mocaya mocaya</foreign>. The phrase (in 
                                                           one or other of these two spellings) is also present in all other canonical versions of the dhāraṇī in this group of texts—with the exception of the heavily abridged version in the 
                                                           Phukdrak Kangyur (see <ptr target="#UT22084-090-041-214"/>). See also <ptr target="#UT22084-090-041-207"/>; one could speculate that this phrase might possibly have been displaced 
-                                                          at some point by a scribal error.</note>
+                                                          at some point by a scribal error.</p>
+                                                                <p key="toh984" tid="93">The phrase here <foreign xml:lang="Sa-Ltn">samantān mocaya mocaya</foreign> is absent at this point in the 
+                                                                        Degé text of Toh 597 in the Action Tantra section, despite this version, Toh 984, being its supposedly duplicate reiteration. The same phrase is also present in the Stok Palace Kangyur, 
+                                                                        and in the Sanskrit manuscripts according to Hidas’ edition; in the Narthang and Lhasa Kangyurs it reads <foreign xml:lang="Sa-Ltn">samantā mocaya mocaya</foreign>. In 
+                                                                        one or other of these two spellings it is also present in all other canonical versions of the dhāraṇī in this group of texts—with the exception of the heavily abridged version in the 
+                                                                        Phukdrak Kangyur (see <ptr target="#UT22084-090-041-214"/>). See also <ptr target="#UT22084-090-041-207"/>; one could speculate that this phrase might possibly have been displaced 
+                                                                        at some point by a scribal error.</p>
+                        </note>
                                                 <mantra type="dharani" xml:lang="Sa-Ltn">samanta­raśmi­pari­śuddhe |
                                                         sarva­tathāgata­hṛdayādhiṣṭhānādhiṣṭhite | mudre mudre <ref cRef="F.245.b" key="toh597" type="folio" xml:id="UT22084-090-041-187"/>
                                                         mahā­mudre mahā­mudrā­mantra­pade svāhā<note place="end" xml:id="UT22084-090-041-60"> Hidas has
